Adding run options